--- a/myapp/deployment.yaml
+++ b/myapp/deployment.yaml
@@ -17,10 +17,9 @@ spec:
         - name: nginx
           image: nginx:latest
           volumeMounts:
-                  - name: config-volume
-          mountPath: /usr/share/ngix/html
-     volumes:
-             - name: config-volume
-     configMap:
-             name: myapp
-
+            - name: config-volume
+              mountPath: /usr/share/nginx/html
+      volumes:
+        - name: config-volume
+          configMap:
+            name: myapp
