--- a/myapp/cm.yaml
+++ b/myapp/cm.yaml
@@ -1,7 +1,7 @@
-piVersion: v1
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: myapp
 data:
- :index.html: |
+  index.html: |
     This is a custom app!
